[gd_scene load_steps=3 format=2]

[ext_resource path="res://incantation/Incantation.gd" type="Script" id=1]
[ext_resource path="res://operations/displaying/operation_display.tscn" type="PackedScene" id=2]

[node name="Incantation" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1784.0
margin_bottom = -696.0
rect_min_size = Vector2( 136, 384 )
mouse_filter = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="operation" parent="." instance=ExtResource( 2 )]
margin_right = -116.0
margin_bottom = -431.0

[node name="operation2" parent="." instance=ExtResource( 2 )]
margin_left = 72.0
margin_top = 48.0
margin_right = -44.0
margin_bottom = -383.0

[node name="operation3" parent="." instance=ExtResource( 2 )]
margin_top = 80.0
margin_right = -116.0
margin_bottom = -351.0

[node name="operation4" parent="." instance=ExtResource( 2 )]
margin_left = 72.0
margin_top = 128.0
margin_right = -44.0
margin_bottom = -303.0

[node name="operation5" parent="." instance=ExtResource( 2 )]
margin_top = 160.0
margin_right = -116.0
margin_bottom = -271.0

[node name="operation6" parent="." instance=ExtResource( 2 )]
margin_left = 72.0
margin_top = 208.0
margin_right = -44.0
margin_bottom = -223.0

[node name="operation7" parent="." instance=ExtResource( 2 )]
margin_top = 240.0
margin_right = -116.0
margin_bottom = -191.0

[node name="operation8" parent="." instance=ExtResource( 2 )]
margin_left = 32.0
margin_top = 320.0
margin_right = -84.0
margin_bottom = -111.0
